--- a/.github/workflows/opa-policy-check.yml
+++ b/.github/workflows/opa-policy-check.yml
@@ -36,9 +36,9 @@ jobs:
         run: terraform plan -out=tfplan
         working-directory: ./
         # Add AWS credentials if needed
-        # env:
-        #   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        #   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS }}
 
       - name: Generate JSON Plan
         run: terraform show -json tfplan > plan.json
