--- a/.github/workflows/opa-policy-check.yml
+++ b/.github/workflows/opa-policy-check.yml
@@ -16,8 +16,8 @@ jobs:
     name: Validate Terraform Plan Against OPA Policies
     runs-on: ubuntu-latest
     env: 
-      AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY }} 
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS }} 
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }} 
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
       AWS_REGION: sa-east-1
 
     steps:
