--- a/.github/workflows/deploy-after-approval.yml
+++ b/.github/workflows/deploy-after-approval.yml
@@ -12,6 +12,8 @@ jobs:
   wait-for-approval:
     name: Manual Approval Gate
     runs-on: ubuntu-latest
+    environment: 
+      name: production
     steps:
       - name: Await Approval
         uses: trstringer/manual-approval@v1
